# Camera-car

./: CMakeLists.txt  cmake_commands.bat  joint_limits.yml  package.xml
config/: gz_bridge.yaml  ros2_controllers.yaml
description/: camera.xacro  car.urdf.xacro  car_core.urdf.xacro  gazebo_colors.xacro  lidar.xacro  ros2_control.xacro
description/meshes/stl/: body-mesh.stl  cam-mesh.stl  rotate-mesh.stl  wheel_bl-mesh.stl  wheel_br-mesh.stl  wheel_fl-mesh.stl  wheel_fr-mesh.stl
launch/: camera_car_launch.py
rviz/: camera_car.rviz
src/: controller_converter.cpp  teleoperation_car.cpp
worlds/: empty.world
